# algo1

algo1/laboratorio/: .gitignore
algo1/laboratorio/clase1/: ejercicio1  ejercicio2  ejercicio3.cpp  ejercicio4.cpp  ejercicio5_fibonacci.cpp  ejercicio7_sumaDivisores.cpp
algo1/laboratorio/clase2/: ejercicio3_claseCentinelaControladores.cpp  ejercicio4_acumuladores  ejercicio5_diametro  ejercicio8_collatz.cpp  (+1 more)
algo1/laboratorio/clase7/template_alumnos/: CMakeLists.txt  adicional_tateti.cpp  adicional_willy  ejercicios  ejercicios.cpp  enunciado  main.cpp
algo1/latex/: solucion.aux  solucion.fdb_latexmk  solucion.fls  solucion.tex
laboratorio/clase1/: ejercicio1.cpp  ejercicio2.cpp  ejercicio3  ejercicio4  ejercicio5_fibonacci  ejercicio7_sumaDivisores  ejercicio8_combinatorio  ejercicio8_combinatorio.cpp
laboratorio/clase10/: CMakeLists.txt  main  main_algorithms.cpp
laboratorio/clase2/: ejercicio2_claseCentinela  ejercicio2_claseCentinela.cpp  ejercicio3_claseCentinelaControladores  ejercicio4_acumuladores.cpp  ejercicio5_circulo.cpp  ejercicio6  ejercicio6_cuenta.cpp  ejercicio7  ejercicio7_swap.cpp  ejercicio8_collatz  ejercicio9_division.cpp
laboratorio/clase8/: enunciados.txt
laboratorio/entregable1/: division  estaOrdenado  estaOrdenado.cpp  fibonacci.cpp  rotar.cpp  swap  swap.cpp
laboratorio/entregable2/: Existe_pico  Existe_pico.cpp  ordenar.cpp
laboratorio/entregable3/: esTriangular.cpp  rotar.cpp  subsecuencia
laboratorio/entregable4/: bpp  bpp.cpp  menorMasGrande  menorMasGrande.cpp  ordenar  ordenar.cpp  puntoFijo  puntoFijo.cpp
(+33 files in other folders)
